--- a/calculator.html
+++ b/calculator.html
@@ -1,72 +1,1 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Calculator</title>
-        <link rel="stylesheet" type="text/css" href="../css/calculator.css"/>
-        <script type="text/javascript" src="../js/calculator.js"></script>
-    </head>
-    
-    <body onload="setCalculator();">
-        <div class="main">
-            <input type="text" id="screen" disabled="disabled" style="direction: rtl"/>
-            <div id="angle">
-                <input type="radio" id="degrees" name="angle" checked="check" /> Degrees
-                <input type="radio" id="radians" name="angle"/> Radians
-                <input type="radio" id="grads" name="angle"/> Grads
-            </div>
-            <button id="mc" onclick="test();">MC</button>
-            <button id="mr">MR</button>
-            <button id="ms">MS</button>
-            <button id="m_plus">M+</button>
-            <button id="m_minus">M-</button>
-            <button id="blank" disabled="disabled" ></button>
-            <button id="inv">Inv</button>
-            <button id="ln">ln</button>
-            <button id="leftpara">(</button>
-            <button id="rightpara">)</button>
-            <button id="delete" onclick="deleteLast();"><img src="../img/delete.png"/></button>
-            <button id="ce" onclick="deleteLast();">CE</button>
-            <button id="c" onclick="clearAll();">C</button>
-            <button id="plusMinus">+/-</button>
-            <button id="root"><img src="../img/root1.png" width="18" height="18"/></button>
-            <button id="int">Int</button>
-            <button id="sinh" onclick="trigonometricOprClicked('sinh');">sinh</button>
-            <button id="sin" onclick="trigonometricOprClicked('sin');">sin</button>
-            <button id="x_2">x<sup>2</sup></button>
-            <button id="n_fact">n!</button>
-            <button id="seven" onclick="numberClicked(7);">7</button>
-            <button id="eight" onclick="numberClicked(8);">8</button>
-            <button id="nine" onclick="numberClicked(9);">9</button>
-            <button id="divide" onclick="basicOprClicked('/');">/</button>
-            <button id="percent">%</button>
-            <button id="dms">dms</button>
-            <button id="cosh" onclick="trigonometricOprClicked('cosh');">cosh</button>
-            <button id="cos" onclick="trigonometricOprClicked('cos');">cos</button>
-            <button id="x_y">x<sup>y</sup></button>
-            <button id="x_root_y">y<img style="vertical-align: middle;" src="../img/root1.png" width="18" height="18"/>x</button>
-            <button id="four" onclick="numberClicked(4);">4</button>
-            <button id="five" onclick="numberClicked(5);">5</button>
-            <button id="six" onclick="numberClicked(6);">6</button>
-            <button id="multi" onclick="basicOprClicked('*');">*</button>
-            <button id="reci">1/x</button>
-            <button id="pi"><img src="../img/pi.png"/></button>
-            <button id="tanh" onclick="trigonometricOprClicked('tanh');">tanh</button>
-            <button id="tan" onclick="trigonometricOprClicked('tan');">tan</button>
-            <button id="x_3">x<sup>3</sup></button>
-            <button id="3_root_x">3<img style="vertical-align: middle;" src="../img/root1.png" width="18" height="18"/>x</button>
-            <button id="one" onclick="numberClicked(1);">1</button>
-            <button id="two" onclick="numberClicked(2);">2</button>
-            <button id="three" onclick="numberClicked(3);">3</button>
-            <button id="minus" onclick="basicOprClicked('-');">-</button>
-            <button id="equal" onclick="equalTo();">=</button>
-            <button id="f_e">F-E</button>
-            <button id="exp">Exp</button>
-            <button id="mod">Mod</button>
-            <button id="log">log</button>
-            <button id="10_x">10<sup>x</sup></button>
-            <button id="zero" onclick="numberClicked(0);">0</button>
-            <button id="dot">.</button>
-            <button id="plus" onclick="basicOprClicked('+');">+</button>
-        </div>
-    </body>
-</html>
+modified
